Fix sass and yml errors

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,6 +2,6 @@
 # Jekyll needs front matter for SCSS files
 ---
 
-$gray-5: #313131
-$gray-6: #111111
+$gray-5: #313131;
+$gray-6: #111111;
 @import "hydeout";
