--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -79,7 +79,7 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-size: 3.25rem;
 }
 
@@ -122,8 +122,8 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  padding-top:    4rem;
-  padding-bottom: 4rem;
+  padding-top:    3rem;
+  padding-bottom: 3rem;
 }
 
 @media (min-width: 48em) {
