--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,4 @@
 <p>
-  &copy; {{ site.time | date: '%Y' }}. R. Siegbert
+  &copy; {{ site.time | date: '%Y' }}.
+  <a href="{{ "/LICENSE.md" | relative_url }}">MIT License.</a>
 </p>
