--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -14,6 +14,7 @@ layout: page
             {{ post.title }}
         </a>
     </h2>
+    <i>{{ post.sub_title }}</i>
     {% include post-meta.html post=post %}
 
     {% if post.excerpt %}
