--- a/themes/PaperModded/layouts/partials/footer.html
+++ b/themes/PaperModded/layouts/partials/footer.html
@@ -7,9 +7,8 @@
   {{- end }} |
   <span>
     🔋 by
-    <a style="text-decoration-line:none !important;" href="https://gohugo.io/" rel="noopener noreferrer"
-      target="_blank">🐹</a> &
-    ✨
+    <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">🐹</a> &
+    <a href="https://read.cv/roland" rel="noopener noreferrer" target="_blank">✨</a>
   </span>
 </footer>
 {{- end }}
