--- a/themes/PaperModded/assets/css/common/post-entry.css
+++ b/themes/PaperModded/assets/css/common/post-entry.css
@@ -2,9 +2,14 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    transition: transform 0.1s;
     justify-content: center;
     min-height: 320px;
     margin: var(--gap) 0 calc(var(--gap) * 2) 0;
+}
+
+.first-entry:hover {
+    transform: scale(1.04);
 }
 
 .first-entry .entry-header {
@@ -37,14 +42,14 @@
     position: relative;
     margin-bottom: var(--gap);
     padding: var(--gap);
-    background: var(--entry);
-    border-radius: var(--radius);
+    /* background: var(--entry); */
+    /* border-radius: var(--radius); */
     transition: transform 0.1s;
-    border: 1px solid var(--border);
+    /* border: 1px solid var(--border); */
 }
 
-.post-entry:active {
-    transform: scale(0.96);
+.post-entry:hover {
+    transform: scale(1.04);
 }
 
 .tag-entry .entry-cover {
