--- a/themes/PaperModded/assets/css/core/theme-vars.css
+++ b/themes/PaperModded/assets/css/core/theme-vars.css
@@ -14,6 +14,7 @@
     --content: rgb(31, 31, 31);
     --hljs-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
+    /* --code-bg: rgb(255, 255, 255); */
     --border: rgb(238, 238, 238);
 }
 
