--- a/themes/PaperModded/assets/css/common/post-single.css
+++ b/themes/PaperModded/assets/css/common/post-single.css
@@ -17,6 +17,7 @@
 .breadcrumbs {
     color: var(--secondary);
     font-size: 14px;
+    font-style: italic;
     display: flex;
     flex-wrap: wrap;
 }
