--- a/themes/PaperModded/assets/css/common/post-entry.css
+++ b/themes/PaperModded/assets/css/common/post-entry.css
@@ -44,9 +44,10 @@
     margin-bottom: var(--gap);
     padding: var(--gap);
     /* background: var(--entry); */
-     border-radius: var(--radius);
+    /* border-radius: var(--radius); */
     transition: transform 0.1s;
     /* border: 1px solid var(--border); */
+    border-top: 1px solid var(--border);
 }
 
 .post-entry:hover {
